list group head

--- a/admin/home.html
+++ b/admin/home.html
@@ -45,11 +45,11 @@
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <div class="media">
-                            <a class="pull-left" href="#">
+                            <a class="pull-left" href="user-page.html">
                                 <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
                             </a>
                             <div class="media-body">
-                                <h5 class="media-heading">张二天王大一</h5>
+                                <h5 class="media-heading"><a href="#" class="nulinkunderline"> 张二天王大一</a></h5>
                                 <p class="small">
                                     项目管理<br>
                                     身份认证信息
