--- a/admin/settings-secret.html
+++ b/admin/settings-secret.html
@@ -62,7 +62,9 @@
                 </div>-->
 
                 <div class="list-group ">
-
+                    <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
+                        系统设置<span class="sr-only">系统设置</span>
+                    </a>
                     <a href="settings.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">权限设置</div>
