--- a/admin/user-page-upload.html
+++ b/admin/user-page-upload.html
@@ -47,7 +47,9 @@
 
 
                 <div class="list-group ">
-
+                    <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
+                        个人中心<span class="sr-only">个人中心</span>
+                    </a>
                     <a href="user-page.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">个人资料</div>
