--- a/admin/group-list.html
+++ b/admin/group-list.html
@@ -82,9 +82,9 @@
                     </div>
                     <!-- List group -->
                     <div class="list-group">
-                        <a href="#" class="list-group-item">Web设计</a>
-                        <a href="#" class="list-group-item">Morbi leo risus</a>
-                        <a href="#" class="list-group-item">APP开发</a>
+                        <a href="post.html" class="list-group-item">Web设计</a>
+                        <a href="post.html#" class="list-group-item">Morbi leo risus</a>
+                        <a href="post.html#" class="list-group-item">APP开发</a>
                         <a href="#" class="list-group-item list-group-item-info">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-6">显示全部</div>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="panel-body">
                         <div class="media pt10 ren-newest-info">
-                            <a class="pull-left" href="#">
+                            <a class="pull-left" href="post.html">
                                 <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
                             </a>
                             <div class="media-body pl15">
@@ -157,7 +157,7 @@
                                 <div class="row">
                                     <div class="col-lg-11">
                                         <dl>
-                                            <dt><a href="#" class="nulinkunderline">学生创意发展中心小组</a></dt>
+                                            <dt><a href="post.html" class="nulinkunderline">学生创意发展中心小组</a></dt>
                                             <dd class="small ptb5">45 个成员 在此聚集</dd>
                                             <dd class="small">Bootstrap是Twitter推出的一个开源的用于前端开发的工具包。它由Twitter的设计师Mark Otto和Jacob Thornton合作开发，是一个CSS/HTML框架。Bootstrap提供了优雅的HTML和CSS规范，它即是由动态CSS语言Less写成。Bootstrap一经推出后颇受欢迎，一直是GitHub上的热门开源项目，包括NASA的MSNBC（微软全国广播公司）的Breaking News都使用了该项目。</dd>
                                         </dl>
@@ -170,7 +170,7 @@
                         </div>
                         <hr class="clearfix"/>
                         <div class="media pt10 ren-newest-info">
-                            <a class="pull-left" href="#">
+                            <a class="pull-left" href="post.html">
                                 <img class="media-object" src="../img/default_avatar.gif" alt="50*50" title="50*50" style="height:50px; width:50px;">
                             </a>
                             <div class="media-body pl15">
@@ -178,7 +178,7 @@
                                 <div class="row">
                                     <div class="col-lg-11">
                                         <dl>
-                                            <dt><a href="#" class="nulinkunderline">Bootstrap研究</a></dt>
+                                            <dt><a href="post.html" class="nulinkunderline">Bootstrap研究</a></dt>
                                             <dd class="small ptb5">34 个成员 在此聚集</dd>
                                             <dd class="small">Twitter Bootstrap：前端框架利器 Twitter 在2011年8月将Bootstrap开源，并在2012年2月3日发布了2.0版。在GitHub上，这个项目已有拥超过2万位关注者和4000个分支。</dd>
                                         </dl>
