--- a/admin/info-center.html
+++ b/admin/info-center.html
@@ -50,7 +50,7 @@
                     <a href="#" class="list-group-item list-group-item-info active disabled nocursor">
                         通知中心<span class="sr-only">通知中心</span>
                     </a>
-                    <a href="user-page.html" class="list-group-item list-group-item-info">
+                    <a href="info-center.html" class="list-group-item list-group-item-info">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">站内信息</div>
                             <div class="col-sm-4 col-lg-4 text-right">
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="user-page-upload.html" class="list-group-item">
+                    <a href="info-center.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">项目消息</div>
                             <div class="col-sm-4 col-lg-4 text-right">
@@ -67,7 +67,7 @@
                         </div>
                     </a>
 
-                    <a href="user-page-tag.html" class="list-group-item">
+                    <a href="info-center.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">群组消息</div>
                             <div class="col-sm-4 col-lg-4 text-right">
@@ -76,7 +76,7 @@
                         </div>
                     </a>
 
-                    <a href="user-page-tag.html" class="list-group-item">
+                    <a href="info-center.html" class="list-group-item">
                         <div class="row">
                             <div class="col-sm-8 col-lg-8">联系人消息</div>
                             <div class="col-sm-4 col-lg-4 text-right">
