--- a/head.html
+++ b/head.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="admin/user_signin.html">注册</a></li>
-                <li><a href="admin/user_signin.html">登录</a></li>
+                <li><a href="admin/home.html">登录</a></li>
                 <li><a href="#">第三方登录</a></li>
             </ul>
             <div class="navbar-form navbar-right navbar-form-input">
