--- a/admin/head.html
+++ b/admin/head.html
@@ -33,7 +33,7 @@
                         <li><a href="user-page.html"><i class="glyphicon glyphicon-user"></i> &nbsp;&nbsp;个人中心</a></li>
                         <li><a href="settings.html"><i class="glyphicon glyphicon-cog"></i> &nbsp;&nbsp;系统设置</a></li>
                         <li class="divider"></li>
-                        <li><a href="signin.html"><i class="glyphicon glyphicon-off"></i> &nbsp;&nbsp;退出</a></li>
+                        <li><a href="user_signin.html"><i class="glyphicon glyphicon-off"></i> &nbsp;&nbsp;退出</a></li>
                     </ul>
                 </li>
             </ul>
