--- a/admin/home.html
+++ b/admin/home.html
@@ -69,11 +69,11 @@
                                 <!-- Split button -->
                                 <div class="btn-group">
 
-                                    <i class="glyphicon glyphicon-plus cursor" data-toggle="dropdown">
+                                    <span class="glyphicon glyphicon-plus cursor" data-toggle="dropdown">
                                         <span class="sr-only">新增</span>
-                                    </i>
+                                    </span>
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a href="#" ><i class="glyphicon glyphicon-plus"></i>  新建</a></li>
+                                        <li><a href="group-create.html" ><i class="glyphicon glyphicon-plus"></i>  新建</a></li>
                                         <li><a href="#" data-toggle="modal" data-target=".ren-bs-join-group-modal-sm"><i class="glyphicon glyphicon-hand-down"></i>  加入</a></li>
                                     </ul>
                                 </div>
