--- a/admin/info-center.html
+++ b/admin/info-center.html
@@ -102,7 +102,7 @@
                             <b>最新消息</b>
                         </div>
                         <div class="col-lg-3 text-right">
-                            <a href="#" class="nulinkunderline">删除所有</a>
+                            <a href="#" class="nulinkunderline"><span class="glyphicon glyphicon-remove"></span> 删除所有</a>
                         </div>
                     </div>
 
@@ -170,7 +170,7 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="text-right">
-                                    <button type="button" class="btn btn-primary btn-sm btn-block">从提醒中删除</button>
+                                    <button type="button" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-remove"></span> 从提醒中删除</button>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                             </div>
                             <div class="col-lg-3">
                                 <div class="text-right">
-                                    <button type="button" class="btn btn-primary btn-sm btn-block">从提醒中删除</button>
+                                    <button type="button" class="btn btn-primary btn-sm btn-block"><span class="glyphicon glyphicon-remove"></span> 从提醒中删除</button>
                                 </div>
                             </div>
                         </div>
