--- a/admin/group-list.html
+++ b/admin/group-list.html
@@ -69,9 +69,9 @@
                                 <!-- Split button -->
                                 <div class="btn-group">
 
-                                    <i class="glyphicon glyphicon-plus cursor" data-toggle="dropdown">
+                                    <span class="glyphicon glyphicon-plus cursor" data-toggle="dropdown">
                                         <span class="sr-only">新增</span>
-                                    </i>
+                                    </span>
                                     <ul class="dropdown-menu" role="menu">
                                         <li><a href="#"><i class="glyphicon glyphicon-plus"></i>  新建</a></li>
                                         <li><a href="#"><i class="glyphicon glyphicon-hand-down"></i>  加入</a></li>
