--- a/admin/group-create.html
+++ b/admin/group-create.html
@@ -133,7 +133,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="panel-footer text-center">
+                    <div class="panel-footer text-center small color-grey">
                         申请邮件将发送到****老师处。
                         您可以与ta联系，加速认证。<br />
                         ****邮箱: <a href="#" class="alert-link">ABC@dfg.com</a>
