--- a/admin/settings-infoway.html
+++ b/admin/settings-infoway.html
@@ -245,7 +245,7 @@
                                     <td colspan="5">
                                         <div class="form-group mtmb15">
                                             <div class="col-sm-offset-3 col-sm-5">
-                                                <button type="submit" class="btn btn-primary btn-block">保存设置</button>
+                                                <button type="submit" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-ok"></span> 保存设置</button>
                                             </div>
                                         </div>
                                     </td>
