--- a/admin/settings-secret.html
+++ b/admin/settings-secret.html
@@ -162,7 +162,7 @@
                                 <hr class="clearfix mt5mb15">
                                 <div class="form-group">
                                     <div class="col-sm-offset-3 col-sm-9">
-                                        <button type="submit" class="btn btn-primary">保存设置</button>
+                                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 保存设置</button>
                                     </div>
                                 </div>
                             </form>
