--- a/admin/user-page.html
+++ b/admin/user-page.html
@@ -328,7 +328,7 @@
                                 <div class="clearfix mt5mb15"></div>
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
-                                        <button type="submit" class="btn btn-primary">保存设置</button>
+                                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 保存设置</button>
                                     </div>
                                 </div>
                             </form>
