--- a/admin/settings-safe.html
+++ b/admin/settings-safe.html
@@ -145,7 +145,7 @@
                                 <div class="clearfix mt5mb15"></div>
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
-                                        <button type="submit" class="btn btn-primary">更新设置</button>
+                                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 保存设置</button>
                                     </div>
                                 </div>
                             </form>
