--- a/admin/settings.html
+++ b/admin/settings.html
@@ -276,8 +276,8 @@
                                 <div class="clearfix mt5mb15"></div>
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
-                                        <button type="submit" class="btn btn-primary">保存权限设置</button> &nbsp;
-                                        <button type="reset" class="btn btn-danger">恢复默认</button>
+                                        <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 保存权限设置</button> &nbsp;
+                                        <button type="reset" class="btn btn-danger"><span class="glyphicon glyphicon-repeat"></span> 恢复默认</button>
                                     </div>
                                 </div>
                             </form>
