--- a/admin/user-page-upload.html
+++ b/admin/user-page-upload.html
@@ -92,35 +92,23 @@
                     </div>
                     <div class="panel-body">
                         <div class="pt10">
-
-                            <div class="section">
-                                <div class="row" id="avatar_msg" style="font-weight:700;color:#f00;display:none;">上传成功！</div>
-                                <div class="row">
-                                    <label><span class="label">当前头像：</span></label>
-                                    <img id="avatar" src="images/default.gif" />
-                                </div>
-                                <div class="row">
-                                    <label><span class="label">上传图片：</span></label>
-                                    <input type="text" id="avatarUpload" value="" />
-                                    <input type="hidden" id="img" name="img" />
-                                    <input type="hidden" id="x" name="x" />
-                                    <input type="hidden" id="y" name="y" />
-                                    <input type="hidden" id="w" name="w" />
-                                    <input type="hidden" id="h" name="h" />
-                                    <div style="padding-top:-10px;" class="pl15">
-                                        <a href="javascript:$('#avatarUpload').uploadify('upload','*')">开始上传</a> |
-                                        <a href="javascript:$('#avatarUpload').uploadify('cancel', '*')">取消上传</a>
+                            <form name="img-upload" class="form-horizontal" id="img-upload" method="post" enctype="multipart/form-data">
+                                <div class="col-sm-4 col-lg-4">
+                                    <div class="ren-image-pre-box">
+                                        <img id="ImgPr" class="media-object" src="../img/login/44_140.jpg" alt="...">
+                                    </div>
+                                    <div class="clearfix">
+                                        <input type="file" name="files[]" multiple="" id="up">
+                                        <button type="submit" class="btn btn-info mtmb15 start pull-left">
+                                            <span class="glyphicon glyphicon-upload"></span>
+                                            <span>上传头像</span>
+                                        </button>
                                     </div>
                                 </div>
-                                <div class="row imgchoose" style="display:none;">编辑头像：<br /><img src="" id="target" /></div>
-                                <div class="row imgchoose" style="display:none;">
-                                    头像预览：<br />
-                                    <div style="width:200px;height:200px;margin:10px 10px 10px 0;overflow:hidden; float:left;"><img class="preview" id="preview3" src="" /></div>
-                                    <div style="width:130px;height:130px;margin:80px 0 10px;overflow:hidden; float:left;"><img class="preview" id="preview2" src="" /></div>
-                                    <div style="width:112px;height:112px;margin:98px 0 10px 10px;overflow:hidden; float:left;"><img class="preview" id="preview" src="" /></div>
-                                </div>
-                                <div class="row">
-                                    <input type="button" class="btn_submit" value="" id="avatar_submit" style="display:none;" />
+                            </form>
+                            <div class="col-lg8">
+                                <div>
+                                    多图预览区
                                 </div>
                             </div>
 
