--- a/admin/group-admin-manege.html
+++ b/admin/group-admin-manege.html
@@ -196,7 +196,7 @@
                                             </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                                            <button type="button" class="btn btn-primary">确定</button>
+                                            <button type="button" class="btn btn-primary add-administrator-yes">确定</button>
                                         </div>
                                     </div>
                                 </div>
@@ -488,6 +488,10 @@
             $(".lyp-btn-add-administrator").click(function () {
                 $(".add-administrator").modal('show');
                 $('.lyp-info-note-chosen1').chosen();
+            });
+
+            $(".add-administrator-yes").click(function () {
+                
             });
         });
       
