--- a/admin/group-post.html
+++ b/admin/group-post.html
@@ -60,8 +60,8 @@
                     </div>
                     <!-- List group -->
                     <div class="list-group">
-                        <a href="post.html" class="list-group-item active">发帖</a>
-                        <a href="menber.html" class="list-group-item">成员</a>
+                        <a href="group-post.html" class="list-group-item active">发帖</a>
+                        <a href="group-menber.html" class="list-group-item">成员</a>
                     </div>
                 </div>
 
