--- a/admin/user_signin.html
+++ b/admin/user_signin.html
@@ -127,7 +127,7 @@
                                     </div>
                                      <button type="button" class="btn btn-primary btn-sm" id="register">提交</button>
                                     <div class="form-group col-lg-12">
-                                        <p class="forgot-password-student"><b>遇到问题了？</b> 请换个Email地址试试，或者请查阅 <a href="https://support.qiyidea.com/home#entries/22816885-forgot-your-password-teacher"> 帮助中心 </a> 。</p>
+                                        <p class="forgot-password-student"><b>遇到问题了？</b> 请换个Email地址试试，或者请查阅 <a href="#"> 帮助中心 </a> 。</p>
                                     </div>
                                     <div class="form-group col-lg-12">
                                         <a id="back-login" href="javascript:;">返回登录</a>
