--- a/admin/group-admin-manege.html
+++ b/admin/group-admin-manege.html
@@ -61,7 +61,7 @@
                     <!-- List group -->
                     <div class="list-group">
                         <a href="group-post.html" class="list-group-item">发帖</a>
-                        <a href="group-menber.html" class="list-group-item">成员</a>
+                        <a href="group-admin-manage-member.html" class="list-group-item">成员</a>
                         <a href="group-admin-manege.html" class="list-group-item active">群组管理</a>
                     </div>
                 </div>
