--- a/admin/group-admin-manage-member.html
+++ b/admin/group-admin-manage-member.html
@@ -62,6 +62,7 @@
                     <div class="list-group">
                         <a href="group-post.html" class="list-group-item">发帖</a>
                         <a href="group-menber.html" class="list-group-item active">成员</a>
+                        <a href="group-admin-manege.html" class="list-group-item">群组管理</a>
                     </div>
                 </div>
 
@@ -145,11 +146,11 @@
                                 </div>
                                 <div class="modal-body" style="padding:20px 30px 50px 30px">
                                     <div class="row">
-                                        <div class="col-lg-3">
+                                        <div class="col-lg-2">
                                             <img class="media-object" src="../img/default_avatar.gif" alt="80*80" title="80*80" style="height:80px; width:80px;">
-                                            <p class="is-add-firend-info"><a class="kick-username" href="javascript:void(0);"></a></p>
+                                            <p class="is-add-firend-info text-center" style="width:80px;"><a class="kick-username" href="javascript:void(0);"></a></p>
                                         </div>
-                                        <div class="col-lg-9">
+                                        <div class="col-lg-10">
                                             <p>请输入验证信息：</p>
                                             <textarea class="form-control reply-textarea" id="replay-content" placeholder="我是..." style="height:100px;"></textarea>
                                         </div>
@@ -249,11 +250,11 @@
                                 </div>
                                 <div class="modal-body" style="padding:20px 30px 50px 30px">
                                     <div class="row">
-                                        <div class="col-lg-3">
+                                        <div class="col-lg-2">
                                             <img class="media-object" src="../img/default_avatar.gif" alt="80*80" title="80*80" style="height:80px; width:80px;">
-                                            <p class="is-add-firend-info"><a class="kick-username" href="javascript:void(0);"></a></p>
+                                            <p class="is-add-firend-info text-center" style="width:80px;"><a class="kick-username" href="javascript:void(0);"></a></p>
                                         </div>
-                                        <div class="col-lg-9">
+                                        <div class="col-lg-10">
                                             <p>请输入验证信息：</p>
                                             <textarea class="form-control reply-textarea" id="replay-content" placeholder="我是..." style="height:100px;"></textarea>
                                         </div>
