消息中心展开

--- a/admin/head.html
+++ b/admin/head.html
@@ -23,7 +23,17 @@
                 <li><a href="#contact">帮助中心</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li id="ren-btn-notifications"><a href="info-center.html" style="padding:15px 20px 8px 20px;"><span class="badge ren-info-msg-bell-badge">5</span><span class="glyphicon glyphicon-bell" style="font-size:22px;"></span><div class="sr-only">消息</div></a></li>
+                <li id="ren-btn-notifications">
+                    <a href="info-center.html" style="padding:15px 20px 8px 20px;" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><span class="badge ren-info-msg-bell-badge">99+</span><span class="glyphicon glyphicon-bell" style="font-size:22px;"></span><div class="sr-only">消息</div></a>
+                    <ul class="dropdown-menu ren-dropdown-menu-1" role="menu" aria-labelledby="ren-dropdown-toggle-user">
+                        <li><a href="#">站点消息 <span class="badge">4</span></a> </li>
+                        <li><a href="doc.html">项目消息 </a></li>
+                        <li><a href="user-page.html">群组消息 <span class="badge">9</span></a></li>
+                        <li><a href="settings.html">私信消息 <span class="badge">20</span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="info-center.html"><i class="glyphicon glyphicon-comment"></i> &nbsp;查看全部</a></li>
+                    </ul>
+                </li>
                 <li id="fat-menu" class="dropdown">
 
                     <a href="#" class="dropdown-toggle ren-dropdown-toggle-user" data-toggle="dropdown"><img src="../img/avatar2_small.jpg" class="img-circle pointer dropdown-toggle" data-toggle="dropdown"> admin <span class="caret"></span></a>
